# Keystone

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dll_analysis.md  pyproject.toml  requirements.txt  retro-report.dot  retro-report.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
DEMO/: keystone_gui.py
cookiecutter-agentic-ci/: .cursorrules  AGENTS.md  CLAUDE.md  README.md  cookiecutter.json
cookiecutter-agentic-ci/hooks/: post_gen_project.py
cookiecutter-agentic-ci/{{cookiecutter.project_slug}}/: AGENTS.md  CLAUDE.md  GEMINI.md
demo/: README.md  keystone_gui.py  requirements.txt
docs/adr/: ADR-0002-scard-unpower-card-root-cause.md  ADR-0003-nfccx-no-escape-commands.md  ADR-0004-card-identified-by-uid-only.md  ADR-0007-armorycrate-pcsc-contention-mitigations.md  ADR-0010-hybrid-wmi-pcsc-monitor.md
experiments/nfc/: experiment_01_baseline_card_read.py  experiment_02_wake_nfc_radio.py  experiment_07_raw_input.py  experiment_08_hid_enumerate.py  experiment_09_ini_monitor.py  experiment_10_wmi_monitor.py
keystone_nfc/: _pcsc.py  card.py  example.py  exceptions.py  monitor.py  reader.py  registry.py  watcher.py
knowledge/: INDEX.md
knowledge/nfc/: acr122u-commands.md  iso-15693.md  rf-field-timing.md
knowledge/smartcard/: apdu-reference.md
my-project/: AGENTS.md
retro/: README.md
retro/tools/: check_adr_gate.py  ensure_deps.py
setup/: install.bat  install.sh
skills/: adr-writer.md  architect.md  bdd-writer.md  bluetooth-specialist.md  code-reviewer.md  database-expert.md  decision-logger.md  embedded-specialist.md  gitops-expert.md  hardware-analyst.md  nfc-rfid-specialist.md  security-expert.md  serial-specialist.md  smart-card-specialist.md  usb-hid-specialist.md  ux-expert.md
tests/: test_card.py  test_e2e_vault.py  test_exceptions.py
tools/probe/: card_probe.py  dll_analyzer.py  extract_strings.py  soulkey_strings.py
tools/retro/: main.py  (+2 more)
(+99 files in other folders)
